Update title and header to 'Soldiers of Valor'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Muster (Veteran Resource Center) - Tactical Display</title>
+    <title>Soldiers of Valor (Veteran Resource Center) - Tactical Display</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -109,7 +109,7 @@
 
     <!-- Header and Crisis Line Card -->
     <header class="p-4 crisis-card text-white text-center rounded-b-xl shadow-lg">
-        <h1 class="text-2xl font-bold font-mono tracking-widest">MISSION READY</h1>
+        <h1 class="text-2xl font-bold font-mono tracking-widest">Soldiers of Valor</h1>
         <p class="text-sm opacity-90 mb-3 font-sans">OPERATIONAL STATUS: HIGH</p>
         
         <!-- Crisis Hotline Button -->
