--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
             /* === TACTICAL FLAG BACKGROUND FIX === */
             /* INSTRUCTIONS: Replace the value below with the public URL (https://...) of your flag image. */
-            background-image: url('YOUR_PUBLIC_IMAGE_URL_HERE'); 
+            background-image: https://github.com/theduckverse/TheMuster/blob/main/tattered_flag.png; 
             background-size: cover;
             background-attachment: fixed; 
             background-position: center;
