--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
             /* === TACTICAL FLAG BACKGROUND FIX === */
             /* INSTRUCTIONS: Replace the value below with the public URL (https://...) of your flag image. */
-            background-image: https://github.com/theduckverse/TheMuster/blob/main/tattered_flag.png; 
+            background-image: url('tattered_flag.png-d2b2cd9e-033d-4afd-a872-9e3d7baa7682');
             background-size: cover;
             background-attachment: fixed; 
             background-position: center;
