--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
              style="filter: invert(100%) hue-rotate(150deg) drop-shadow(0 0 5px rgba(16, 185, 129, 0.8));">
         
         <h1 class="text-2xl font-bold uppercase tracking-wider text-white">
-            MISSION READY RESOURCES
+            Soldiers of Valor
         </h1>
         <p class="text-sm font-light text-gray-200">TACTICAL DISPLAY // GEOSPATIAL RESOURCE SCANNER</p>
     </header>
