Change background image URL in index.html
Updated background image URL for tactical flag.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
             /* === TACTICAL FLAG BACKGROUND FIX === */
             /* INSTRUCTIONS: Replace the value below with the public URL (https://...) of your flag image. */
-            background-image: url('YOUR_PUBLIC_IMAGE_URL_HERE'); 
+            background-image: tattered_flag.jpg-d2b2cd9e-033d-4afd-a872-9e3d7baa7682'; 
             background-size: cover;
             background-attachment: fixed; 
             background-position: center;
