--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
 
            <!-- Resource List Section (LIVE DATA REPLACES MOCK DATA) -->
-<div id="resource-section" class="resource-list panel p-4 hidden space-y-3">
+<div id="resource-section" class="resource-list panel p-4 space-y-3">
     <h2 class="text-xl font-semibold accent-green">LOCAL RESOURCE SCAN: LIVE DATA</h2>
     <p class="text-sm text-gray-400">STATUS: synced with secure Firebase node.</p>
 
