Refactor error handling in geolocation retrieval

--- a/index.html
+++ b/index.html
@@ -1181,28 +1181,28 @@ function startResourceListener() {
                     }, 1000);
                 },
                 (error) => {
-                    let errorMessage = "ERROR: UNABLE TO RETRIEVE COORDS.";
-                    if (error.code === error.PERMISSION_DENIED) {
-                        errorMessage = "ERROR: GEOLOCATION DENIED. ENABLE DEVICE SERVICES.";
-                    } else if (error.code === error.POSITION_UNAVAILABLE) {
-                        errorMessage = "ERROR: LOCATION DATA UNAVAILABLE.";
-                    } else if (error.code === error.TIMEOUT) {
-                        errorMessage = "ERROR: LOCATION REQUEST TIMEOUT.";
-                    }
-                    
-                    showMessage(errorMessage, true);
-                    
-                    button.disabled = false;
-                    button.textContent = 'EXECUTE LOCATION SCAN';
-                    loading.classList.add('hidden');
-                    locationInfo.classList.add('hidden');
-                    resourceSection.classList.add('hidden');
-                },
-                {
-                    enableHighAccuracy: true,
-                    timeout: 5000,
-                    maximumAge: 0
-                }
+    let errorMessage = "ERROR: UNABLE TO RETRIEVE COORDS.";
+    if (error.code === error.PERMISSION_DENIED) {
+        errorMessage = "ERROR: GEOLOCATION DENIED. ENABLE DEVICE SERVICES.";
+    } else if (error.code === error.POSITION_UNAVAILABLE) {
+        errorMessage = "ERROR: LOCATION DATA UNAVAILABLE.";
+    } else if (error.code === error.TIMEOUT) {
+        errorMessage = "ERROR: LOCATION REQUEST TIMEOUT.";
+    }
+
+    showMessage(errorMessage, true);
+
+    // Prevent crashing when tab is not mounted
+    const locationInfo = document.getElementById("current-location");
+    const resourceSection = document.getElementById("resource-section");
+
+    if (locationInfo) locationInfo.classList.add("hidden");
+    if (resourceSection) resourceSection.classList.add("hidden");
+
+    button.disabled = false;
+    button.textContent = "EXECUTE LOCATION SCAN";
+    loading.classList.add("hidden");
+}
             );
         });
     </script>
