Fix closing div tag in resource section

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 <div id="resource-section" class="resource-list panel p-4 space-y-3">
     <h2 class="text-xl font-semibold accent-green">LOCAL RESOURCE SCAN: LIVE DATA</h2>
     <p class="text-sm text-gray-400">STATUS: synced with secure Firebase node.</p>
-
+</div>
     <!-- Firebase will dynamically insert items here -->
     <ul id="resource-list" class="space-y-4"></ul>
       </div>
