--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         <!-- --- TAB 2: BENEFITS NAVIGATOR CONTENT (Unchanged) --- -->
         <div id="content-benefits" class="hidden space-y-6">
             <h2 class="text-2xl font-bold accent-green border-b border-gray-600 pb-2 font-mono">BENEFITS PROTOCOL: CLAIMS</h2>
-            <p class="text-gray-400 text-sm">Filing a disability claim is mission-critical. Use this 4-step sequence.</p>
+            <p class="text-gray-400 text-sm">Filing a disability claim is mission-critical. The steps provided are general knowledge and in no way constitute legal advice. Every outcome is different and we share our knowledge to help get the best outcome for our veteran brothers and sisters. Feel free to email us if you have anything to add to this sequence.</p>
             
             <!-- Step 1 -->
             <div class="panel p-4 space-y-2 border-l-4 border-green-500">
