Enhance medical evidence section with VA buddy letter info
Added detailed instructions for writing a VA buddy letter.

--- a/index.html
+++ b/index.html
@@ -432,6 +432,8 @@
                 <ul class="list-disc ml-5 text-sm text-gray-400 space-y-1">
                     <li>**Service Connection:** Acquire DD-214 and Service Treatment Records (STRs).</li>
                     <li>**Medical Evidence:** Secure current diagnostic records.</li>
+                    <li>**Medical Evidence:** If you have anyone that served that can write letters for you do this. 1.Use VA Form 21-10210 to submit your buddy letter as a formal statement supporting your claim.
+                        2.Write a VA buddy letter, which is a personal statement from someone who knows the veteran well, detailing their condition or service-related experiences. 3.Include specific information in your letter, such as your relationship to the veteran, the events that led to their condition, and how it has affected their daily life. 4.Submit the letter using VA Form 21-10210, either online through the VA’s eBenefits portal, printed and mailed, or submitted in person at a VA regional office. 5.This documentation can help fill in gaps in official records and support your claim effectively..</li>
                     <li>**Nexus:** Link current status to service actions (e.g., doctor's statement).</li>
                 </ul>
             </div>
