Update crisis hotline button text for clarity

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         <a href="tel:988" class="bg-[#f97316] text-white font-extrabold py-3 px-6 rounded-md shadow-2xl transition-all duration-300 hover:bg-orange-700 flex items-center justify-center space-x-2">
             <!-- Siren Icon -->
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-siren"><path d="M7 16l-3-7h14l-3 7"/><path d="M12 21v-5"/><path d="M12 11V3"/><path d="M12 3L8 9h8z"/></svg>
-            <span class="text-lg font-mono">CRISIS ALERT (988)</span>
+            <span class="text-lg font-mono">IF YOU ARE EXPERIENCING A CRISIS PLEASE CALL (988)</span>
         </a>
     </header>
 
