--- a/index.html
+++ b/index.html
@@ -458,8 +458,8 @@ Fill out a Request Pertaining to Military Records (Standard Form 180). You can g
                     <h3 class="font-bold text-lg accent-green">C&P EVALUATION</h3>
                 </div>
                 <ul class="list-disc ml-5 text-sm text-gray-400 space-y-1">
-                    <li>**Compliance:** Attend all mandated Compensation & Pension (C&P) exams.</li>
-                    <li>**Reporting:** Describe your condition's CURRENT impact on daily function.</li>
+                    <li>**Compliance:** Attend all mandated Compensation & Pension (C&P) exams. A claim (C&P) exam isn’t like a normal medical exam. The provider won’t treat you for any illness or injury, give you referrals to other providers, or prescribe medicine. The purpose of the exam is to gather information that will help the VA make a decision on your claim. During your exam, the provider may do any or all of these things: Perform a basic physical exam. (This may or may not include physical contact) Ask you questions based on the medical records in your claim file. These may include questions from the Disability Benefits Questionnaire (DBQ) for each service-connected condition you’re claiming. Ask you to get other tests (like X-rays or blood work), at no cost to you. Note: If you have questions about what’s happening during your exam, you can ask the provider. But they can’t answer questions about the claims process, tell you the exam results, or make decisions about your claim. </li>
+                    <li>**Reporting:** Describe your condition's CURRENT impact on daily function. Make sure to be thurough in your descriptions. If you have trouble sleeping, let them know how many nights in any given week you may have trouble. The more info given, the better the VA can asses and treat when your claim is accepted. </li>
                 </ul>
             </div>
             
