--- a/index.html
+++ b/index.html
@@ -80,6 +80,30 @@
         text-shadow: 0 0 6px rgba(15, 23, 42, 0.9);
     }
 
+  <!-- 🔥 CONTENT SECTIONS EXAMPLE (Styling Upgrade) -->
+  <section id="mission" class="py-16 max-w-6xl mx-auto px-4">
+    <h2 class="text-3xl font-bold text-[var(--hud-accent)] hud-glow mb-6">
+      Mission Planner
+    </h2>
+
+    <p class="text-gray-300 mb-4">
+      Build your customized tactical transition plan. Identify goals, unlock strategic checklists, 
+      and track your route to stability, benefits, and long-term success.
+    </p>
+
+    <div class="hud-border bg-[#101915] rounded p-6 mt-6">
+      <p class="text-gray-200">[Your existing Mission Planner tool goes here]</p>
+    </div>
+  </section>
+
+
+  <!-- FOOTER -->
+  <footer class="py-10 bg-[#0b110c] border-t border-green-900 text-center text-gray-400">
+    <p>© 2025 SoldiersOfValor.org — Built for Veterans, by Veterans.</p>
+  </footer>
+
+</body>
+</html>
     /* ========== GENERIC PANELS / CARDS ========== */
     .panel {
         background: radial-gradient(circle at top left, rgba(34, 197, 94, 0.14), rgba(15, 23, 42, 0.98));
@@ -360,7 +384,73 @@
     <div id="auth-status" class="bg-green-900/40 text-green-400 p-2 text-xs font-mono text-center border-y border-green-600/50">
         :: INITIALIZING SECURE LINK ::
     </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Soldiers of Valor - Your Tactical Advantage</title>
 
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <style>
+    /* Tactical HUD theme */
+    :root {
+      --military-green: #1f3324;
+      --military-green-light: #2f4a35;
+      --hud-accent: #31ff7a;
+    }
+
+    body {
+      background-color: #0a0f10;
+      color: #e5e7eb;
+    }
+
+    .hud-border {
+      border: 1px solid rgba(49, 255, 122, 0.25);
+    }
+
+    .hud-glow {
+      text-shadow: 0 0 8px rgba(49, 255, 122, 0.4);
+    }
+
+    /* Sticky nav shadow */
+    .nav-shadow {
+      box-shadow: 0 3px 6px rgba(0,0,0,0.35);
+    }
+  </style>
+</head>
+
+<body class="font-mono">
+
+  <!-- 🔥 STICKY NAVIGATION BAR -->
+  <header class="sticky top-0 z-50 bg-[#142117] nav-shadow border-b border-green-900">
+    <div class="max-w-7xl mx-auto flex items-center justify-between px-4 py-3">
+
+      <!-- Logo -->
+      <a href="/" class="text-hud-accent text-xl font-bold hud-glow tracking-widest">
+        SOLDIERS OF VALOR
+      </a>
+
+      <!-- Search Bar -->
+      <div class="hidden md:flex items-center space-x-2">
+        <input 
+          type="text" 
+          placeholder="Search resources, benefits, jobs..." 
+          class="px-3 py-2 bg-[#0f1712] text-gray-300 hud-border rounded focus:outline-none"
+        />
+      </div>
+
+      <!-- Nav Links -->
+      <nav class="hidden md:flex items-center space-x-6 uppercase text-sm">
+        <a href="#mission" class="hover:text-[var(--hud-accent)]">Mission Planner</a>
+        <a href="#resources" class="hover:text-[var(--hud-accent)]">Local Resources</a>
+        <a href="#employment" class="hover:text-[var(--hud-accent)]">Employment</a>
+        <a href="#benefits" class="hover:text-[var(--hud-accent)]">Benefits</a>
+      </nav>
+    </div>
+  </header>
     <!-- Tab Navigation -->
     <nav class="flex w-full bg-[#1a202c] shadow-md z-10 sticky top-0">
         <button id="tab-map" class="tab-button tab-inactive" onclick="switchTab('map')">
