--- a/index.html
+++ b/index.html
@@ -1243,6 +1243,7 @@
         });
 
         window.switchTab = function(tabName) {
+            localStorage.setItem("sov-last-tab", tabName);
             const tabs = ['map', 'benefits', 'goals', 'muster', 'employment', 'resume'];
             tabs.forEach(tab => {
                 const content = document.getElementById(`content-${tab}`);
